# AdventofCode

./: README.md
AoC2022/: Cargo.toml  README.md  day.sh
AoC2022/resources/day02/: input.txt
AoC2022/resources/day04/: input.txt
AoC2022/resources/day05/: input.txt
AoC2022/resources/day07/: input.txt
AoC2022/resources/day08/: input.txt
AoC2022/resources/day24/: input.txt
AoC2022/src/day01/: part1.rs  part2.rs
AoC2022/src/day02/: part1.rs
AoC2022/src/day03/: part1.rs  part2.rs
AoC2023/: Cargo.toml  README.md
AoC2023/day01/src/: main.rs
AoC2023/day02/src/: main copy.rs  main.rs
AoC2023/inputs/: day01.txt  day02.txt
